Closed Bug 525845 Opened 15 years ago Closed 15 years ago

Some characters in WOFF failed to work on Linux and Solaris

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1
Tracking Status
status1.9.2 --- beta2-fixed

People

(Reporter: ginnchen+exoracle, Assigned: ashie)

References

Details

(Keywords: regression)

Attachments

(1 file)

Some characters in this page are missing.
http://people.mozilla.com/~jkew/woff/udhr-sample/

All the characters in this page are missing.
http://people.mozilla.org/~jdaggett/webfonts/mplus-test.html

The page renders well with Firefox 3.5.
Tried Firefox 3.6b1 on both x86 and SPARC.
It works fine.

It might be a recent regression.
Assignee: nobody → ginn.chen
No longer blocks: 507970
Caused by Bug 505284.

It might be reproducible on Linux, too.
But I don't have Linux around right now.

(In reply to comment #0)
> Some characters in this page are missing.
> http://people.mozilla.com/~jkew/woff/udhr-sample/
Forgot to say, select "Downloaded Charis SIL Compact".
Confirmed on Linux.
Assignee: ginn.chen → nobody
OS: Solaris → Linux
Summary: Some characters in WOFF failed to work on Solaris → Some characters in WOFF failed to work on Linux and Solaris
Sorry, it's my foolish mistake.
gfxFcLockedFace::GetGlyph() in gfxPangoFonts.cpp is never called because gfxFT2FontBase doesn't know gfxFcLockedFace class.

  http://hg.mozilla.org/mozilla-central/file/364c3910daed/gfx/thebes/src/gfxFT2FontBase.cpp#l118
  http://hg.mozilla.org/mozilla-central/file/364c3910daed/gfx/thebes/src/gfxPangoFonts.cpp#l526

Now I've noticed it should be replaced with compile time switch and remove gfxFcLockedFace class.
Attachment #410157 - Flags: review?(mozbugz)
Comment on attachment 410157 [details] [diff] [review]
Fix gfxFT2LockedFace::GetGlyph

Thank you for following up on this.  This fix looks sensible.

>+#ifdef CAIRO_HAS_FC_FONT

I'm not sure i'm really happy about using CAIRO_HAS_FC_FONT because this doesn't really have anything to do with cairo.  But this is defined at the right times, and anything else would just be duplicating that, so I guess we go with this for now.
Attachment #410157 - Flags: review?(mozbugz) → review+
Assignee: nobody → ashie
Keywords: checkin-needed
Comment on attachment 410157 [details] [diff] [review]
Fix gfxFT2LockedFace::GetGlyph

a192=beltzner at dolske's request for WinCE; karlt, maybe file a follow up for your concern?
Attachment #410157 - Flags: approval1.9.2+
Pushed to 192: http://hg.mozilla.org/releases/mozilla-1.9.2/rev/e90e81d9caf4
Status: NEW → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Oops, noticed this hadn't actually landed on m-c yet.

Pushed http://hg.mozilla.org/mozilla-central/rev/6b694e4f4101
Hi, it seems this broke some characters on FreeBSD, an example can be seen here: http://wickedmachine.net/~jsa/FreeBSD/bugs/ff36b3_menu.png this was still present in b4 and we fixed it by going back to gfx/thebes/src/gfxPangoFonts.cpp from b1. How can we help with getting this fixed for the 3.6 release?

Cheers,
Florian
Florian, that sounds like bug 527980.
Can you test b5 or the patch in that bug, please?
Yes, it is indeed fixed in b5. Thank you!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: