Bug 525845 - Some characters in WOFF failed to work on Linux and Solaris.  r=karlt